k8s/storage-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-api
  labels:
    app: storage-api
spec:
  selector:
    matchLabels:
      app: storage-api
  template:
    metadata:
      labels:
        app: storage-api
    spec:
      containers:
        - name: storage-api
          image: trycatchf1nally/archive-cloud-storage-api:v1.0.0
