k8s/storage-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: storage-api
